- New API to control implementation wrapper generation.
- Keep members original XML documentation.